[metadata]
name = allpy
version = 0.1.1
author = Matthew Wildrick Thomas
author_email = matthew.thomas@northwestern.edu
description = Estimate the mixed strategy equilibrium of All-Pay Contests with Spillovers
license = MIT License
platform = OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwt/allpy
project_urls =
    Bug Tracker = https://github.com/mwt/allpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires = 
    numpy
    scipy
    inteq
